--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Branches </title>
+	<title>Git Hub repo creating. </title>
+	<meta name="description" content="Github repo creating">
 </head>
 <body>	
 
